# jadidi

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.MD  api.d.lua  config.json  main.cpp  the greatest generator thats ever lived for lua.cpp  the greatest generator thats ever lived.cpp
engine/component/: Animation.h  Animator.cpp  Animator.h  Audio.cpp  Audio.h  Button.cpp  Button.h  Collider.cpp  Collider.h  Component.h  Factory.cpp  Factory.h  Rigidbody.cpp  Rigidbody.h  Sprite.h  Text.cpp  Text.h  Transform.h
engine/core/: Audio.cpp  Audio.h  Engine.cpp  Engine.h  IRenderer.h  Input.cpp  Input.h  Log.cpp  Log.h  State.cpp  State.h  Timer.cpp  Timer.h
engine/core/container/: Queue.h
engine/lua/: LuaApi.cpp  LuaApi.h  LuaBindings.cpp  LuaBindings.h  LuaObject.h
engine/render/: FontManager.cpp  FontManager.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h  SDLRenderer.cpp  SDLRenderer.h  TextureManager.cpp  TextureManager.h
engine/scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  UI.cpp  UI.h
engine/utils/: Config.cpp  Config.h  FileSystem.cpp  FileSystem.h
engine/utils/math/: vector.h
ide autocompletion/: component.d.lua  core.d.lua  input.d.lua  json.d.lua  keys.d.lua  logger.d.lua  math.d.lua  mouse.d.lua  scene.d.lua  state.d.lua
